@@ -37,6 +37,44 @@ configure(subprojects - project(':android')) {
             scopes.COMPILE.plus += [configurations.compile]
         }
     }
+
+    test {
+        // enable TestNG support (default is JUnit)
+        useTestNG()
+
+        // show standard out and standard error of the test JVM(s) on the console
+        testLogging.showStandardStreams = true
+
+        // set heap size for the test JVM(s)
+        minHeapSize = "128m"
+        maxHeapSize = "512m"
+
+        // set JVM arguments for the test JVM(s)
+        jvmArgs '-XX:MaxPermSize=256m'
+
+        // listen to events in the test execution lifecycle
+        beforeTest { descriptor ->
+            logger.lifecycle("Running test: " + descriptor)
+        }
+
+        // listen to standard out and standard error of the test JVM(s)
+        onOutput { descriptor, event ->
+            logger.lifecycle("Test: " + descriptor + " produced standard out/err: " + event.message )
+        }
+    }
+
+    apply plugin: "jacoco"
+
+    task testNG(type: Test) {
+        useTestNG()
+        jacoco {
+            destinationFile = file("$buildDir/jacoco/test.exec")
+        }
+    }
+
+    jacocoTestReport {
+        executionData testNG
+    }
 }
 
 subprojects {
